--- a/Search.html
+++ b/Search.html
@@ -12,7 +12,7 @@
 			$(document).ready(function() {
 				$.ajax({
 					url: 'https://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js?1='+Date.parse(new Date()),
-					timeout : 300,
+					timeout : ms,
 					success(result,status,xhr){
 							window.location.href='https://www.google.com/search?ie=UTF-8&q='+wd;
 					},
